import org.gradle.internal.os.OperatingSystem

buildscript {
    // used in application and jpackage plugin calls of subprojects
    ext.set("os", OperatingSystem.current())
}

plugins {
    id "java"
    id "org.openjfx.javafxplugin" version "0.1.0"
}

subprojects {
    apply(plugin: "java")
    apply(plugin: "org.openjfx.javafxplugin")
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }
    javafx {
        version = "21.0.7"
    }
    repositories {
        mavenCentral()
    }
    tasks.withType(JavaCompile).tap {
        configureEach {
            options.encoding = "UTF-8"
            configure(options) {
                options.compilerArgs << "-Xlint:deprecation" << "-Xlint:unchecked"
            }
        }
    }
}

println("Operating system: '$os'")
